# kmx-qt-demo

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
qml/: AnalyticsWindow.qml  CompactCheckBox.qml  ControlsPage.qml  DashboardPage.qml  DataPage.qml  LauncherPage.qml  Main.qml  MonitoringWindow.qml  OperationsWindow.qml  SettingsWindow.qml  SlidesPage.qml
scripts/: container-build-run.sh  container-enter.sh  container-run-only.sh  container-start.sh  enter-container.sh
scripts/in-container/: clean-build.sh  configure-build.sh  run-app.sh
src/: Engine.cpp  Engine.h  JobModel.cpp  JobModel.h  NotificationModel.cpp  NotificationModel.h  UserModel.cpp  UserModel.h  main.cpp
translations/: qtdemo_en.ts  qtdemo_ro.ts
